[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/CardFound.gd" type="Script" id=1]
[ext_resource path="res://aseprite/SelectionBox.png" type="Texture" id=2]
[ext_resource path="res://res/cards/forest.png" type="Texture" id=3]

[node name="CardFound" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="NodeGroup" type="Node2D" parent="."]
position = Vector2( 640, 360 )
__meta__ = {
"_editor_description_": ""
}

[node name="SelectionScreen" type="Sprite" parent="NodeGroup"]
self_modulate = Color( 0.172549, 0.172549, 0.172549, 0.709804 )
scale = Vector2( 0.590966, 1.5 )
texture = ExtResource( 2 )

[node name="CardName" type="Label" parent="NodeGroup"]
margin_left = -571.283
margin_top = 143.198
margin_right = -146.283
margin_bottom = 180.198
rect_scale = Vector2( 2.7, 2.7 )
text = "Healing"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Label" parent="NodeGroup"]
margin_left = -419.042
margin_top = 278.859
margin_right = 5.95831
margin_bottom = 315.859
rect_scale = Vector2( 2, 2 )
text = "space to continue"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="NodeGroup"]
margin_left = -584.85
margin_top = -357.24
margin_right = 7.15045
margin_bottom = -262.24
rect_scale = Vector2( 1.95, 1.95 )
text = "You Found A new Card!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="NodeGroup"]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
